[tool.poetry]
name = "commitzen-demo"
version = "0.1.0"
description = ""
authors = ["Sashi <SashiDareddy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
commitizen = "^2.35.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
